# tap-braintree

./: README.md  meltano.yml  pyproject.toml  tap-braintree.sh  tox.ini
tap_braintree/: client.py  streams.py  tap.py
tap_braintree/tests/: __init__.py  test_core.py
