[tool.poetry]
name = "tap-braintree"
version = "0.0.1"
description = "`tap-braintree` is a Singer tap for Braintree, built with the Meltano SDK for Singer Taps."
authors = ["Matthew Trinkle"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6.1"
requests = "^2.25.1"
singer-sdk = "^0.3.9"
braintree = "^3.53.0"
flatten-json = "^0.1.13"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-braintree = 'tap_braintree.tap:TapBraintree.cli'
